cmake_minimum_required(VERSION 3.29)
project(TallerN_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(TallerN_1 main.cpp
        ArregloDinamicoProyecto.cpp
        ArregloDinamicoProyecto.h
        ListaNexoSimple.cpp
        ListaNexoSimple.h
        SistemaImpl.cpp
        SistemaImpl.h
        Proyecto.cpp
        Proyecto.h
        Solicitud.cpp
        Solicitud.h
        Nodo.cpp
        Nodo.h)
